# feel-the-streets

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Rocket.toml  __builtins__.pyi  app_requirements.txt  babel.cfg  babel_extractors.py  cargo.toml  changes.dict  entities.yaml  entities.yml  enums.yml  filedict.py  ftst.py  gen_metadata.py  generate_db.py  generation_record_Brno.txt  generation_record_Pařezská Lhota.txt  generation_record_Turnov.txt  memory_diagnostics.py  print_db_stats.py  readme.md  requirements.txt  run_app.py  run_app.spec  run_db_tool.py  server.wsgi  setup.cfg  setup.py  translation_specs.yml  travis.enc  xrc_babel_extractor.py
app/: amqp_queue_naming.py  app_db.py  area_candidates_searcher.py  area_selection.py  areas_browser.py  base_dialog.py  bookmarks.py  changes_applier.py  config.py  config_utils.py  cp.py  entity_utils.py  geometry_utils.py  humanization_utils.py  ini_utils.py  local_areas_utils.py  local_utils.py  locale_setup.py  main.py  main_frame.py  main_window.py  map.py  measuring.py  menu_service.py  message_dialog.py  more_accessible_tree_widget.py  objects_browser.py  qt_output.py  road_segments_browser.py  search_indicator.py  semantic_changelog_generator.py  services.py  size_utils.py  speech_dispatcher_output.py  speech_service.py  structobject.py  time_utils.py  todo.txt  ui.xrc  uimanager.py
aw3d30/: Cargo.toml
ci/: before_install.sh  build.sh  deploy.sh
db_generator/: generate_generator.py  generation_record.py  log_aggregation.py  utils.py
db_tool/: __init__.py  database_updater.py  generation_record.py  generator.tpl  main.py  osm_object.py  osm_object_manager.py  osm_object_translator.py  utils.py
fts_tool/: __init__.py  rename_entity_data_property.py
geoalchemy/: spatialite.py
locale/: fts.pot  messages.pot
oesc/: Cargo.toml
oesc/src/: change_field_type.rs  command.rs  create_frozen_copy.rs  main.rs  rabbitmq_admin_api.rs  regenerate_geometries.rs  regenerate_parent_osm_ids.rs  remove_field.rs  request_redownload.rs  view_field_usage.rs
osm_api/: Cargo.toml
osm_api/src/: boundary_rect.rs  change.rs  change_iterator.rs  changeset.rs  error.rs  lib.rs  object.rs  object_manager.rs  overpass_api_server.rs  polygon_criteria.json  raw_changeset.rs  raw_object.rs  utils.rs
osm_api/src/main_api/: changeset.rs  client.rs  mod.rs  raw_changeset.rs
osm_api/src/overpass_api/: mod.rs  server.rs  servers.rs
osm_api/src/replication/: api.rs  change.rs  mod.rs
osm_api/tests/: replication_api_retrievals.rs
osm_db/: Cargo.toml
osm_db/migrations/2018-09-27-083145_initial_db_structure/: down.sql  up.sql
osm_db/src/: area_db.rs  entities_query.rs  entities_query_condition.rs  entities_query_executor.rs  entity.rs  entity_metadata.rs  entity_relationship.rs  entity_relationship_kind.rs  error.rs  file_finder.rs  init_area_db.sql  lib.rs  semantic_change.rs
osm_db/src/relationship_inference/: address.rs  mod.rs  street.rs
osm_db/src/translation/: checks.rs  conversions.rs  mod.rs  record.rs  spec.rs  translator.rs
osm_db_py/: Cargo.toml
osm_db_py/src/: area_db.rs  conversions.rs  dict_change.rs  entities_query.rs  entity.rs  entity_metadata.rs  field_condition.rs  field_named.rs  lib.rs  semantic_change.rs
pyogg/: __init__.py  flac.py  library_loader.py  ogg.py  opus.py  vorbis.py
redis_api/: Cargo.toml
requirements/: app.txt  common.txt  server.txt
server/: Cargo.toml  Rocket.toml  __init__.py  amqp_connectivity.py  amqp_huey.py  config.py  entities.yml  enums.yml  huey_creation.py  models.py  routes.py  task_utils.py  tasks.py  translation_specs.yml
server/area_database_updater/: __init__.py  change_action_processor.py  database_updater.py  generation_record.py  osm_change.py  osm_change_creator.py  osm_object.py  osm_object_blacklist.py  osm_object_manager.py  osm_object_translator.py  utils.py
server/area_database_updater/generators/: __init__.py  abandoned.py  addressable.py  advertising.py  atm.py  bank.py  barrier.py  bench.py  board.py  boundary.py  bridge.py  building.py  bunker.py  checkpoint.py  collection.py  craft.py  crossing.py  demolished_building.py  elevated.py  enforcement.py  fire_hydrant.py  ford.py  fountain.py  fuel.py  garden.py  golf_course.py  graveyard.py  historic.py  land.py  leisure.py  level.py  man_made.py  memorial.py  named.py  natural.py  office.py  piste.py  place.py  platform.py  playground.py  (+18 more)
server/migrations/2019-10-06-112257_add_osm_id/: down.sql  up.sql
server/migrations/20190204132413_create_areas_table/: up.sql
server/migrations/2020-03-20-230944_add_db_size/: down.sql  up.sql
server/migrations/2021-01-04-215533_add_frozen_state/: down.sql  up.sql
server/migrations/2022-01-14-224333_add_parent_osm_ids/: down.sql  up.sql
server/migrations/2023-01-22-184644_add_last_update_remark/: down.sql  up.sql
server/migrations/2023-02-05-180528_add_geometry/: down.sql  up.sql
server/src/: amqp_utils.rs  api_routes.rs  area.rs  area_messaging.rs  background_task.rs  background_task_constants.rs  background_task_delivery.rs  datetime_utils.rs  db.rs  diff_utils.rs  error.rs  lib.rs  names_cache.rs  routes.rs  schema.rs  ui_routes.rs
server/src/background_tasks/: area_db_creation.rs  area_db_update.rs  changesets_cache_filling.rs  mod.rs  osm_changes_processing.rs  process_osm_changes.rs  state_tracking.rs
server/src/background_tasks/osm_changes_processing/: changes_preprocessing.rs  mod.rs  semantic_changes_container.rs  state_tracking.rs
server/src/db/: changeset.rs  mod.rs
server_deployment/: deploy.sh  fts_server.service  fts_server_watcher.path  fts_server_watcher.service  fts_worker.service  fts_worker_watcher.path  fts_worker_watcher.service  huey-consumer.service  huey_consumer.service
server_rs/: Cargo.toml  entities.yml
shared/: database.py  diff_utils.py  entity_registry.py  geometry_utils.py  humanization_utils.py  model_introspection.py  semantic_change.py  services.py  sqlalchemy_logging.py  time_utils.py  validated_quantity.py
sqlitemap/: CHANGELOG.md  (+5 more)
zstd_util/: Cargo.toml
zstd_util/src/: context.rs  error.rs  lib.rs
(+549 files in other folders)
