[package]
name = "oesc"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osm_api = {path="../osm_api"}
osm_db = {path="../osm_db"}
redis_api = {path = "../redis_api"}
server={path="../server"}
anyhow = "1.0.99"
dotenvy = "0.15.7"
url = "2.5.7"
ureq = { version = "3.1.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.227", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }

[features]
