[package]
name = "osm_api"
version = "0.2.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }
log = "0.4.29"
itertools = "0.14.0"
regex = "1.12.2"
once_cell = "1.21.3"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
tempfile = "3.23.0"
bincode = {version="2.0.1", features=["serde"]}
hashbrown = { version = "0.16.1", features = ["serde"] }
wkb = "0.9.2"
geo-types = "0.7.18"
smol_str = { version = "0.3.4", features = ["serde"] }
zstd_util = "0.1.5"
crossbeam-channel = "0.5.15"
sled = "0.34.7"
quick-xml = {version="0.38.4", features=["serialize", "overlapped-lists"]}
flate2 = "1.1.7"
backon = "1.6.0"
geo-traits = "0.3.0"

[features]
