[package]
name = "osm_api"
version = "0.2.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }
log = "0.4.29"
itertools = "0.14.0"
regex = "1.12.3"
once_cell = "1.21.3"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
tempfile = "3.25.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
wkb = "0.9.2"
geo-types = "0.7.18"
smol_str = { version = "0.3.5", features = ["serde"] }
zstd_util = "0.1.5"
crossbeam-channel = "0.5.15"
redb = "3.1.0"
quick-xml = {version="0.39.1", features=["serialize", "overlapped-lists"]}
flate2 = "1.1.8"
backon = "1.6.0"
geo-traits = "0.3.0"
bitcode = { version = "0.6.9", features = ["serde"] }

[features]
