[package]
name = "osm_db"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
osm_api = {path = "../osm_api"}
aw3d30 = {path="../aw3d30"}
zstd_util = "0.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
indexmap = { version = "2.12.0", features = ["serde"] }
once_cell = "1.21.3"
log = "0.4.28"
uom = "0.37.0"
rusqlite = { "version" = "~0.37", "features" = ["bundled-windows", "load_extension"] }
thiserror = "2.0.17"
hashbrown = { version = "0.16.1", features = ["serde"] }
dirs-next = "2.0.0"
base64 = "0.22.1"
wkb = "0.9.2"
geo-types = "0.7.18"
geo-traits = "0.3.0"
