[package]
name = "osm_db"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
osm_api = {path = "../osm_api"}
aw3d30 = {path="../aw3d30"}
zstd_util = "0.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
indexmap = { version = "2.14.0", features = ["serde"] }
once_cell = "1.21.4"
log = "0.4.29"
uom = "0.38.0"
rusqlite = { "version" = "~0.39", "features" = ["bundled-windows", "load_extension", "fallible_uint"] }
thiserror = "2.0.18"
hashbrown = { version = "0.17.0", features = ["serde"] }
dirs-next = "2.0.0"
base64 = "0.22.1"
wkb = "0.9.2"
geo-types = "0.7.19"
geo-traits = "0.3.0"
