[package]
name = "osm_db_py"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
osm_db = {"path" = "../osm_db"}
pyo3 = "0.22.4"
pyo3-log = "0.11.0"
log = "0.4.22"
serde_json = "1.0.129"

[lib]
name = "osm_db"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]
