[package]
name = "osm_db_py"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
osm_db = {"path" = "../osm_db"}
pyo3 = "0.25.0"
pyo3-log = "0.12.4"
log = "0.4.27"
serde_json = "1.0.140"

[lib]
name = "osm_db"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]
