[package]
name = "server"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.22"
aw3d30 = {path="../aw3d30"}
osm_db = {path="../osm_db"}
osm_api = {path="../osm_api"}
rusqlite = { "version" = "~0.32", "features" = ["bundled-windows", "load_extension", "chrono"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", default-features = false, features = ["serde", "clock", "std"] }
thiserror = "2.0.6"
dotenvy = "0.15.7"
base64 = "0.22.1"
doitlater = "0.3.0"
redis_api = {path = "../redis_api"}
axum = "0.7.9"
tera = "1.20.0"
axum-extra = { version = "0.9.6", features = ["async-read-body"] }
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = {version="0.3.19", features=["env-filter"]}
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
