[package]
name = "server"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.27"
aw3d30 = {path="../aw3d30"}
osm_db = {path="../osm_db"}
osm_api = {path="../osm_api"}
rusqlite = { "version" = "~0.37", "features" = ["bundled-windows", "load_extension", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock", "std"] }
thiserror = "2.0.16"
dotenvy = "0.15.7"
base64 = "0.22.1"
doitlater = "0.4.0"
redis_api = {path = "../redis_api"}
axum = "0.8.4"
tera = "1.20.0"
axum-extra = { version = "0.10.1", features = ["async-read-body"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = {version="0.3.20", features=["env-filter"]}
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
