[package]
name = "server"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.29"
aw3d30 = {path="../aw3d30"}
osm_db = {path="../osm_db"}
osm_api = {path="../osm_api"}
rusqlite = { "version" = "~0.38", "features" = ["bundled-windows", "load_extension", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock", "std"] }
thiserror = "2.0.17"
dotenvy = "0.15.7"
base64 = "0.22.1"
doitlater = "0.4.0"
redis_api = {path = "../redis_api"}
axum = "0.8.8"
tera = "1.20.1"
axum-extra = { version = "0.12.5", features = ["async-read-body"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tracing-subscriber = {version="0.3.22", features=["env-filter"]}
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
