[package]
name = "zstd_util"
version = "0.1.0"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
zstd-safe = "*"
thiserror = "*"

[dev_dependencies]
env_logger = "*"